add tests to check log content

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ before_install:
 
 script:
   - ./.travis/test.sh
+  - docker exec thredds grep -ir severe logs/ || echo no severe catalina log entries
+  - docker exec thredds grep -ir severe content/thredds/logs/ || echo no severe thredds log entries
+  - docker exec thredds grep -ir warn content/thredds/logs/ || echo no warn thredds log entries
