--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ script:
   - docker exec thredds grep -ir severe logs/ || echo no severe catalina log entries
   - docker exec thredds grep -ir severe content/thredds/logs/ || echo no severe thredds log entries
   - docker exec thredds grep -ir warn content/thredds/logs/ || echo no warn thredds log entries
-  - true
+  - docker logs thredds 2>/dev/null | grep -i warn || echo no warn docker log stdout entries
+  - docker logs thredds 2>&1 >/dev/null | grep -i warn || echo no warn docker log stderr entries
