--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
 
 script:
   - ./.travis/test.sh
+  - docker exec thredds ls -la logs/
   - docker exec thredds grep -ir severe logs/ && exit 1 || echo no severe catalina log entries
+  - docker exec thredds ls -la content/thredds/logs/
   - docker exec thredds grep -ir severe content/thredds/logs/ && exit 1 || echo no severe thredds log entries
   - docker exec thredds grep -ir warn content/thredds/logs/ && exit 1 || echo no warn thredds log entries
   - docker logs thredds 2>/dev/null | grep -i warn && exit 1 || echo no warn docker log stdout entries
